@@ -1,10 +1,15 @@
 plugins {
     application
-    id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 group = "com.test"
 version = "1.0-SNAPSHOT"
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(24))
+    }
+}
 
 val osName = System.getProperty("os.name").lowercase()
 val platform = when {
@@ -23,22 +28,22 @@ dependencies {
     implementation(fileTree("libs/$platform") { include("*.jar") })
 }
 
-javafx {
-    version = "24"
-    modules = listOf("javafx.controls", "javafx.fxml", "javafx.graphics")
-}
-
 application {
     mainClass.set("com.test.SwitchButtonShowcase")
 }
 
 tasks.withType<JavaExec> {
     doFirst {
-        jvmArgs(
-            "--module-path", localJfxPath,
-            "--add-modules", "javafx.controls"
-        )
-
         println("Using Local JFX Path: $localJfxPath")
+        println("Using Java Toolchain: ${java.toolchain.languageVersion.get()}")
     }
+
+    jvmArgs(
+        "--module-path", localJfxPath,
+        "--add-modules", "javafx.controls",
+
+        "-Djava.library.path=$localJfxPath",
+        "--enable-native-access=javafx.graphics",
+        "-Dprism.verbose=true"
+    )
 }
